@@ -1,6 +1,11 @@
 People are encouraged to pick some of these and implement it.  Send
 all patches to cbagwell@users.sourceforge.net.
 
+  o Update all read routines to be like WAV handler and only
+    return data in multiples of sample_size*channels.  This
+    will prevent corrupt files from causing sox to go into
+    infinit loop trying to read just a couple more bytes.
+
   o Make "mix" an alias of "avg" since thats closer to what it
     really is.  For 2->2 mixes, make a 2 option L->L and R->R
     shortcut.  Similar 4 option for 4->4.
